objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Secondary_Provider_Plan__c</fullName>
        <label>Secondary Provider Plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>HMAA - Option 1</fullName>
                </value>
                <value>
                    <fullName>HMAA - Option 2</fullName>
                </value>
                <value>
                    <fullName>HMAA - Comp Basic</fullName>
                </value>
                <value>
                    <fullName>HMAA - Comp Plus</fullName>
                </value>
                <value>
                    <fullName>HMSA - Comp Med</fullName>
                </value>
                <value>
                    <fullName>HMSA - PPP</fullName>
                </value>
                <value>
                    <fullName>HMSA - HPH</fullName>
                </value>
                <value>
                    <fullName>Kaiser - HMO</fullName>
                </value>
                <value>
                    <fullName>Kaiser - Added Choice</fullName>
                </value>
                <value>
                    <fullName>Kaiser - Other</fullName>
                </value>
                <value>
                    <fullName>UHA - 3000</fullName>
                </value>
                <value>
                    <fullName>UHA - 600</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_up_Contribution_Amount__c</fullName>
        <label>Start-up Contribution Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100% Employer / 0% Employee</fullName>
                </value>
                <value>
                    <fullName>50% Employer / 50% Employee</fullName>
                </value>
                <value>
                    <fullName>0% Employer / 100% Employee</fullName>
                </value>
                <value>
                    <fullName>Other Employer / Employee Mix</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_up_Healthcare_Benefit_Desired__c</fullName>
        <label>Start-up Healthcare Benefit Desired</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Only</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription / Vision</fullName>
                </value>
                <value>
                    <fullName>Medical / Prescription / Vision / Dental</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                    <default>true</default>
                    <label>Hawaii</label>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcontractors_Detail__c</fullName>
        <label>Subcontractors Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractors_Percent__c</fullName>
        <label>Subcontractors Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subcontractors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcontractors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suite_Unit__c</fullName>
        <label>Suite/Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDI_Rate__c</fullName>
        <label>TDI Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TDI_Statement__c</fullName>
        <label>TDI Statement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Time_and_Attendance_System_Cost__c</fullName>
        <label>Time and Attendance Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_and_Attendance__c</fullName>
        <label>Time and Attendance System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <formula>Employees_FT__c + Employees_PT__c + Employees_CSO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_or_Above_Detail__c</fullName>
        <label>Under or Above Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Under_or_Above_Percent__c</fullName>
        <label>Under or Above Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Under_or_Above__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under or Above</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WC_Additional_Work_Types__c</fullName>
        <label>WC Additional Work Types</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WC_FT_Employees_1__c</fullName>
        <label>WC FT Employees 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WC_FT_Employees_2__c</fullName>
        <label>WC FT Employees 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WC_FT_Employees_3__c</fullName>
        <label>WC FT Employees 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WC_PT_Employees_1__c</fullName>
        <label>WC PT Employees 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WC_PT_Employees_2__c</fullName>
        <label>WC PT Employees 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WC_PT_Employees_3__c</fullName>
        <label>WC PT Employees 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WC_Work_Type_Classification_1__c</fullName>
        <label>WC Work Type Classification 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Work_Type_Classification_2__c</fullName>
        <label>WC Work Type Classification 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Work_Type_Classification_3__c</fullName>
        <label>WC Work Type Classification 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Work_Type_Percent_of_Payroll_1__c</fullName>
        <label>WC Work Type Percent of Payroll 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WC_Work_Type_Percent_of_Payroll_2__c</fullName>
        <label>WC Work Type Percent of Payroll 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WC_Work_Type_Percent_of_Payroll_3__c</fullName>
        <label>WC Work Type Percent of Payroll 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Written_Safety_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Safety Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <label>Year Established</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1900</fullName>
                </value>
                <value>
                    <fullName>1901</fullName>
                </value>
                <value>
                    <fullName>1902</fullName>
                </value>
                <value>
                    <fullName>1903</fullName>
                </value>
                <value>
                    <fullName>1904</fullName>
                </value>
                <value>
                    <fullName>1905</fullName>
                </value>
                <value>
                    <fullName>1906</fullName>
                </value>
                <value>
                    <fullName>1907</fullName>
                </value>
                <value>
                    <fullName>1908</fullName>
                </value>
                <value>
                    <fullName>1909</fullName>
                </value>
                <value>
                    <fullName>1910</fullName>
                </value>
                <value>
                    <fullName>1911</fullName>
                </value>
                <value>
                    <fullName>1912</fullName>
                </value>
                <value>
                    <fullName>1913</fullName>
                </value>
                <value>
                    <fullName>1914</fullName>
                </value>
                <value>
                    <fullName>1915</fullName>
                </value>
                <value>
                    <fullName>1916</fullName>
                </value>
                <value>
                    <fullName>1917</fullName>
                </value>
                <value>
                    <fullName>1918</fullName>
                </value>
                <value>
                    <fullName>1919</fullName>
                </value>
                <value>
                    <fullName>1920</fullName>
                </value>
                <value>
                    <fullName>1921</fullName>
                </value>
                <value>
                    <fullName>1922</fullName>
                </value>
                <value>
                    <fullName>1923</fullName>
                </value>
                <value>
                    <fullName>1924</fullName>
                </value>
                <value>
                    <fullName>1925</fullName>
                </value>
                <value>
                    <fullName>1926</fullName>
                </value>
                <value>
                    <fullName>1927</fullName>
                </value>
                <value>
                    <fullName>1928</fullName>
                </value>
                <value>
                    <fullName>1929</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ref_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ref_BDM__c</fullName>
        <formula>Opportunity_Name__r.Owner.FirstName &amp; Opportunity_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Cell__c</fullName>
        <formula>ref_Primary_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_City__c</fullName>
        <formula>ref_Account_Name__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Client_Legal_Name__c</fullName>
        <formula>ref_Account_Name__r.Client_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Description_of_Business__c</fullName>
        <formula>ref_Account_Name__r.Description_of_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Email__c</fullName>
        <formula>HYPERLINK("mailto:"&amp; ref_Primary_Contact__r.Email, ref_Primary_Contact__r.Email, "_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Fax__c</fullName>
        <formula>ref_Primary_Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Phone__c</fullName>
        <formula>ref_Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ref_Start_up__c</fullName>
        <formula>ref_Account_Name__r.Start_up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ref_State__c</fullName>
        <formula>ref_Account_Name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Title__c</fullName>
        <formula>ref_Primary_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Website__c</fullName>
        <formula>ref_Account_Name__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ref_Year_Established__c</fullName>
        <formula>ref_Account_Name__r.Year_of_Establishment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Established</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ref_Zip__c</fullName>
        <formula>ref_Account_Name__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ref_Account_Name__c</columns>
        <columns>Legal_Business_Name__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ref_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unknown_Application</fullName>
        <columns>NAME</columns>
        <columns>ref_Account_Name__c</columns>
        <columns>ref_Client_Legal_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Web</value>
        </filters>
        <label>Unknown Applications</label>
    </listViews>
    <recordTypes>
        <fullName>Salesforce</fullName>
        <active>true</active>
        <label>Salesforce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web</fullName>
        <active>true</active>
        <description>Created from Web</description>
        <label>Web</label>
    </recordTypes>
</CustomObject>